package group_assignment.employee_management.config.security;

import java.util.Date;

import javax.crypto.SecretKey;


import org.springframework.beans.factory.annotation.Value;
import org.springframework.stereotype.Component;

import group_assignment.employee_management.entity.Role;
import io.jsonwebtoken.Claims;
import io.jsonwebtoken.JwtException;
import io.jsonwebtoken.Jwts;
import io.jsonwebtoken.security.Keys;
import jakarta.annotation.PostConstruct;

@Component
public class JwtProvider {
  @Value("${jwt.secret}")
  private String secret;

  private SecretKey secretKey;

  @Value("${jwt.expiration}")
  private Long expiration;

  @PostConstruct
  public void setKey() {
    System.out.println("secret = " + secret);
    secretKey = Keys.hmacShaKeyFor(secret.getBytes());
  }

  private Claims getClaims(String token) {
      return Jwts.parserBuilder()
        .setSigningKey(secretKey)
        .build()
        .parseClaimsJws(token)
        .getBody();
  }

  public String generateToken(Long userId) {
    return Jwts.builder()
      .setSubject(userId.toString())
      .setIssuedAt(new Date())
      .setExpiration(new Date(System.currentTimeMillis() + expiration))
      .signWith(secretKey)
      .compact();
  }

  public boolean validateToken(String token) {
    try {
      getClaims(token);
      return true;
    } catch (Exception e) {
      return false;
    }
  }

  public Long getUserId(String token) {
    try {
      return Long.parseLong(getClaims(token).getSubject());
    } catch (NumberFormatException e) {
      throw new JwtException("Invalid userId format");
    } catch (Exception e) {
      return null;
    }
  }

}