package group_assignment.employee_management.entity;

public enum Department {
  GENERAL,
  HR,
  PLANNING,
  SALES;
}
